# ac_template

./: .gitignore  Makefile.am  README.org  configure.ac
include/: main.h  utils.h
src/: Makefile.am  main.c
tests/: test_main  test_main.c
